--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,118 @@
-﻿<Window x:Class="Prog122_S24_L3.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Prog122_S24_L3"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+﻿<Window
+    x:Class="Prog122_S24_L3.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Prog122_S24_L3"
+    mc:Ignorable="d"
+    Title="MainWindow"
+    Height="450"
+    Width="800">
+    <Canvas
+        Background="#FFC6D1FF">
+        <Label
+            Content="First Name"
+            Canvas.Left="109"
+            Canvas.Top="88" />
+        <TextBox
+            x:Name="txtFirstName"
+            Canvas.Left="193"
+            TextWrapping="Wrap"
+            Canvas.Top="92"
+            Width="120"
+            TextChanged="TextBox_TextChanged" />
+        <Label
+            Content="Last Name"
+            Canvas.Left="109"
+            Canvas.Top="129"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top" />
+        <TextBox
+            x:Name="txtLastName"
+            Canvas.Left="193"
+            TextWrapping="Wrap"
+            Canvas.Top="133"
+            Width="120"
+            TextChanged="TextBox_TextChanged"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center" />
+        <Button
+            x:Name="btnDisplayInformation"
+            Content="DisplayInformation"
+            Canvas.Left="109"
+            Canvas.Top="378"
+            Height="38"
+            Width="232"
+            Click="btnDisplayInformation_Click"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top" />
 
-    </Grid>
+        <!--Display the users full name after button is clicked
+        1. Added a label
+        2. Give our label
+        3. In our .CS we are going to "wireup" our front end to our back end code
+        
+        -->
+
+        <Label
+            x:Name="lblDisplayFullName"
+            Content="Label"
+            Canvas.Left="518"
+            Canvas.Top="28" />
+        <!--Rich Text Box-->
+        <RichTextBox
+            Height="333"
+            Width="359"
+            Canvas.Left="376"
+            Canvas.Top="64"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top">
+
+            <FlowDocument>
+                <!--Page of Paper-->
+                <Paragraph>
+                    <!--Paragraph of Text-->
+                    <!--we are going to NAME the run-->
+                    <Run
+                        x:Name="runHomeInfo"
+                        x:Name="runDisplay"
+                        Text="RichTextBox" />
+                    <!--Single Sentence-->
+
+                </Paragraph>
+
+            </FlowDocument>
+
+        </RichTextBox>
+        
+        <!--RTB Address-->
+        <RichTextBox
+            Height="164"
+            Width="254"
+            Canvas.Left="98"
+            Canvas.Top="209"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top">
+
+            <FlowDocument>
+                <Paragraph>
+                    <!--Single Sentence-->
+                    <!--Paragraph of Text-->
+                    <Run
+                        x:Name="runDisplay1"
+                        Text="RichTextBox" />
+                </Paragraph>
+
+            </FlowDocument>
+
+        </RichTextBox>
+        <Label
+            Content="Address"
+            Canvas.Left="109"
+            Canvas.Top="160"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top" />
+
+    </Canvas>
 </Window>
